server/server-deployment.yaml
apiVersion: apps/v1 #  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
kind: Deployment
metadata:
  name: project-server
spec:
  selector:
    matchLabels:
      app: project-server
      role: master
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: project-server
        role: master
        tier: backend
    spec:
      containers:
      - name: master
        image: project-server:latest
        imagePullPolicy: Never
        resources:
          requests:
            cpu: 100m
            memory: 500Mi
        ports:
        - containerPort: 5023
---
